--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,10 @@
   box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
 }
 
+.grey{
+  color:#918E9B;
+}
+
 .airlogo{
   max-width: 100px;
   }
@@ -35,3 +39,16 @@
   margin-bottom:16px;
 }
 
+.card{
+  width:175px;
+  font-size:12px;
+}
+
+.card-image{
+  width:100%;
+  border-radius:10px;
+}
+
+.card-star{
+  height:14px;
+}
