--- a/src/App.css
+++ b/src/App.css
@@ -39,16 +39,33 @@
   margin-bottom:16px;
 }
 
+.card-list{
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 20px;
+  overflow-x: auto;
+}
+
 .card{
   width:175px;
   font-size:12px;
+  display:flex;
+  flex:  0 0 auto;
+  flex-direction:column;
 }
 
 .card-image{
   width:100%;
-  border-radius:10px;
+  border-radius:9px;
+  margin-bottom:9px;
 }
-
+.card-stats {
+  display: flex;
+  align-items: center;
+}
 .card-star{
   height:14px;
+}
+.card-price {
+  margin-top: auto;
 }
